# Report-Guided-Annotation

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/report_guided_annotation/: __init__.py  __main__.py  create_automatic_annotations.py  extract_lesion_candidates.py  parse_report.py
tests/: README-DEV.md  test_example_script.py  test_lesion_candidate_extraction.py  test_parse_report.py  test_report_guided_annotation.py
tests/input/: dynamic_extraction_edge_case.mha  num_lesions_to_retain_map.json
tests/parse_reports_output/: num_lesions_to_retain_map.json
tests/reports/: sample_1.txt  sample_2.txt  sample_3.txt
